--- a/Vincent_MILB_Store/index.html
+++ b/Vincent_MILB_Store/index.html
@@ -3,7 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <title>index.html</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link href="css/main.css" rel="stylesheet" type="text/css">
+<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+<script src="js/main.js"></script>
 </head>
 
 <body>
@@ -33,7 +36,7 @@
   </video>
   Conten</div>
   <section class="products">
-    <h1>&nbsp;Team Name Collection</h1>
+    <h1>&nbsp;Toledo Lava Pelicans Collection&nbsp;&nbsp;</h1>
     <div class="product-wrapper">
       <div class="single-product"><img src="https://place-hold.it/266x193" alt="" width="" height="">
         <h3 class="product-name">PRODUCT NAME&nbsp;</h3>
@@ -69,10 +72,43 @@
       </div>
     </div>
   </section>
+	<div class="product">
+    <img src="https://place-hold.it/400x600"alt="">
+  <form action="">
+
+  <label for="size">
+    SIZE
+  </label>
+    <br>
+  <select name="shirt-size" id="shirt-size" class="shirt-select">
+    <option value="19" selected="selected">Small</option>
+    <option value="25">Medium</option>
+    <option value="25">Large</option>
+    <option value="50">x-large</option>
+  </select>
+  
+<br>
+ <div class="value-button" id="decrease" onclick="decreaseValue()" value="Decrease Value">-</div>
+  <input type="number" id="number" value="1" />
+  <div class="value-button" id="increase" onclick="increaseValue()" value="Increase Value">+</div>
+  <br>
+    
+      <button type="button" id="addToCart">
+    add to cart
+  </button>
+     <div id="price-container">
+        <h3>&nbsp;</h3>
+        <h3>Product Price</h3>
+<h1 id="price"></h1>
+    </div>
+
+</form>
+</div>
+<!--
   <section class="products-feature"><img src="https://place-hold.it/636x780" alt="" width="" height="">
     <div class="large-cart">
       <div class="large-cart-contents">
-        <h1>Team Name Collection UNISEX Tee-Shirt</h1>
+        <h1>Toledo Lava Pelicans UNISEX Tee-Shirt&nbsp; &nbsp;&nbsp;</h1>
         <p>$44.00</p>
         <label for="select">Size:</label>
         <select name="select" id="select">
@@ -88,6 +124,7 @@
       </div>
 </div>
   </section>
+-->
   <section class="lead-generation">
     <div class="lead-gen-content">
       <h1>SIGN-UP AND SAVE 10%&nbsp;</h1>
